"button.ok" = "OK";
"button.apply" = "Apply";
"button.cancel" = "Cancel";
"button.close" = "Close";
"button.confirm" = "Confirm";
...
"button.next" = "Next";
"button.delete" = "Delete";
"button.share" = "Share";
"button.paste" = "Paste";
"button.resend" = "Resend";
...
"button.connect" = "Connect";
"button.save" = "Save";
"button.send" = "Send";
"button.sign" = "Sign";
"button.more" = "Show More";
"button.i_understand" = "I Understand";
"button.learn_more" = "Learn More";
"button.unlock" = "Unlock";
"button.select" = "Select";
"button.later" = "Later";
...
"placeholder.search" = "Search";

"status" = "Status";
"connecting" = "Connecting...";
"online" = "Online";
...
"restore.cloud.app_backups" = "App backups";

"restore.cloud.password.title" = "Enter Password";
"restore.cloud.password.placeholder" = "Backup Password";
"restore.cloud.password.description" = "Enter the password to import your backup";
...
"backup.cloud.password.description" = "Set the unlock password for your backup. It must consist of at least 8 symbols and include at least one lowercase letter, uppercase letter, number, and a special character.";
"backup.cloud.password.highlighted_description" = "Don't forget this password! It is separate from your Apple iCloud password, and it cannot be recovered or reset.";
"backup.cloud.password.placeholder" = "Password";
"backup.cloud.password.confirm.placeholder" = "Confirm";
"backup.cloud.password.save" = "Save and Backup";
...

"balance.title" = "Wallet";
"balance.tab_bar_item" = "Balance";
"balance.send" = "Send";
"balance.withdraw" = "Withdraw";
"balance.swap" = "Swap";
"balance.receive" = "Receive";
"balance.deposit" = "Deposit";
"balance.chart" = "Chart";
"balance.scan" = "Scan";
"balance.copy_address" = "Copy Address";
"balance.coin_info" = "Coin Info";
"balance.hide_coin" = "Hide Coin";
...

"deposit.address_format" = "Format";
"deposit.address_network" = "Network";
"deposit.qr_code_description" = "Your address for depositing %@";
"deposit.qr_code_description.watch" = "Watch address of %@";
...
"deposit.activate" = "Activate";

"deposit.amount" = "Amount";
"deposit.set_amount" = "Set Amount";
"deposit.enter_amount" = "Enter Amount";
...
"deposit.subaddresses.title" = "Subaddresses";
"deposit.subaddresses.description" = "Use subaddresses to manage multiple unique addresses in one wallet - easier to organize, safer for your privacy.";
"deposit.subaddresses.transactions_count" = "Transactions: %@";

"deposit.zcash.restore.description" = "Have you previously owned any ZEC coins?";
...
"send.confirmation.sync_failed" = "Sync Failed";
"send.confirmation.invalid_data" = "Invalid Data";
"send.confirmation.refresh" = "Refresh";
"send.confirmation.please_wait" = "Please Wait";
"send.confirmation.expires_in" = "Expires in %@";
...
"market.vaults.premium.unlock" = "Unlock Premium";

"market.vaults.filter" = "Filter";
"market.vaults.filter.all_assets" = "All Assets";
"market.vaults.filter.eth_yield" = "ETH Yield";
...
"transactions.failed" = "Failed";

"transactions.receive" = "Received";
"transactions.send" = "Sent";
"transactions.burn" = "Burned";
...

"tx_info.title" = "Transaction Info";
"tx_info.date" = "Date";
"tx_info.title_approval" = "Swap Approval";
"tx_info.status.pending" = "Pending";
...
// Settings

"settings.title" = "Settings";
"settings.tab_bar_item" = "Settings";
"settings.manage_accounts" = "Manage Wallets";
"settings.blockchain_settings" = "Blockchain Settings";
"settings.backup_manager" = "Backup Manager";
"settings.security" = "Security";
"settings.personal_support" = "Personal Support";
"settings.base_currency" = "Base Currency";
...

"wallet_connect.non_supported_account.description" = "Your current wallet type %@ does not support WalletConnect";
"wallet_connect.non_supported_account.switch" = "Switch";

"wallet_connect.pending_requests_title" = "Pending Requests";
...
